# Supplier-Risk-scan-agent

./: .gitignore  DESIGN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run_streamlit.bat  run_streamlit.sh  streamlit_app.py
backend/.streamlit/: config.toml
backend/app/: alert_engine.py  main.py  mock_data.py  models.py  risk_scorer.py  routes.py  scanner.py  ws_manager.py
backend/tests/: api_test_report.py  conftest.py  test_alert_engine.py  test_mock_data.py  test_models.py  test_risk_scorer.py  test_routes.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  select.tsx  table.tsx
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/pages/: AlertsPage.tsx  Dashboard.tsx  LandingPage.tsx  SupplierDetailPage.tsx  SuppliersPage.tsx
frontend/src/types/: supplier.ts
